# translate-dataset

./: README.md  pyproject.toml
scripts/: azure_openai_translate.py  cuda-test.py  openai_translate.py  seamless_translate.py  test_seamless.py
